Remove stray <br/>s from transcription source

--- a/src/epub/text/furrow-maker.xhtml
+++ b/src/epub/text/furrow-maker.xhtml
@@ -17,8 +17,7 @@
 			<p>“He changes the way he builds his house, does he not?” said the brown one.</p>
 			<p>“So my family say,” said the other. “They say he has changed of late.”</p>
 			<p>“They say he takes much to cities?” the brown one said.</p>
-			<p>“My cousin who lives in belfries tells me so,” said the black one.<br/>
-			“He says he is much in cities.”<br/></p>
+			<p>“My cousin who lives in belfries tells me so,” said the black one. “He says he is much in cities.”</p>
 			<p>“And there he grows lean?” said the brown one.</p>
 			<p>“Yes, he grows lean.”</p>
 			<p>“Is it true what they say?” said the brown one.</p>
