--- a/src/epub/text/the-guest.xhtml
+++ b/src/epub/text/the-guest.xhtml
@@ -8,8 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="the-guest" epub:type="se:short-story">
 			<h2 epub:type="title">The Guest</h2>
-			<p>A young man came into an ornate restaurant at eight o’clock in<br/>
-			London.<br/></p>
+			<p>A young man came into an ornate restaurant at eight o’clock in London.</p>
 			<p>He was alone, but two places had been laid at the table which was reserved for him. He had chosen the dinner very carefully, by letter a week before.</p>
 			<p>A waiter asked him about the other guest.</p>
 			<p>“You probably won’t see him till the coffee comes,” the young man told him; so he was served alone.</p>
