--- a/src/epub/text/the-hen.xhtml
+++ b/src/epub/text/the-hen.xhtml
@@ -17,11 +17,9 @@
 			<p>At evening she came back panting.</p>
 			<p>And in the poultry-yard she told the poultry how she had gone South as far as the high road, and saw the great world’s traffic going by, and came to lands where the potato grew, and saw the stubble upon which men live, and at the end of the road had found a garden, and there were roses in it⁠—beautiful roses!⁠—and the gardener himself was there with his braces on.</p>
 			<p>“How extremely interesting,” the poultry said, “and what a really beautiful description!”</p>
-			<p>And the Winter wore away, and the bitter months went by, and the<br/>
-			Spring of the year appeared, and the swallows came again.<br/></p>
+			<p>And the Winter wore away, and the bitter months went by, and the Spring of the year appeared, and the swallows came again.</p>
 			<p>“We have been to the South,” they said, “and the valleys beyond the sea.”</p>
-			<p>But the poultry would not agree that there was a sea in the South:<br/>
-			“You should hear our hen,” they said.<br/></p>
+			<p>But the poultry would not agree that there was a sea in the South: “You should hear our hen,” they said.</p>
 		</article>
 	</body>
 </html>
