--- a/src/epub/text/the-three-tall-sons.xhtml
+++ b/src/epub/text/the-three-tall-sons.xhtml
@@ -16,8 +16,7 @@
 			<p>And one day she came again, and again they sent her hence. But her three tall sons came too.</p>
 			<p>“These shall go in,” she said. “Even these my sons to your city.”</p>
 			<p>And the three tall sons went in.</p>
-			<p>And these are Nature’s sons, the forlorn one’s terrible children,<br/>
-			War, Famine and Plague.<br/></p>
+			<p>And these are Nature’s sons, the forlorn one’s terrible children, War, Famine and Plague.</p>
 			<p>Yea and they went in there and found Man unawares in his city still poring over his Problems, obsessed with his civilization, and never hearing their tread as those three came up behind.</p>
 		</article>
 	</body>
