--- a/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
+++ b/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
@@ -28,8 +28,7 @@
 			<p>The Hare ran on for nearly three hundred yards, nearly in fact as far as the winning-post, when it suddenly struck him what a fool he looked running races with a Tortoise who was nowhere in sight, and he sat down again and scratched.</p>
 			<p>“Run hard. Run hard,” said the crowd, and “Let him rest.”</p>
 			<p>“Whatever is the use of it?” said the Hare, and this time he stopped for good. Some say he slept.</p>
-			<p>There was desperate excitement for an hour or two, and then the<br/>
-			Tortoise won.<br/></p>
+			<p>There was desperate excitement for an hour or two, and then the Tortoise won.</p>
 			<p>“Run hard. Run hard,” shouted his backers. “Hard shell and hard living: that’s what has done it.” And then they asked the Tortoise what his achievement signified, and he went and asked the Turtle. And the Turtle said, “It is a glorious victory for the forces of swiftness.” And then the Tortoise repeated it to his friends. And all the beasts said nothing else for years. And even to this day, “a glorious victory for the forces of swiftness” is a catchphrase in the house of the snail.</p>
 			<p>And the reason that this version of the race is not widely known is that very few of those that witnessed it survived the great forest-fire that happened shortly after. It came up over the weald by night with a great wind. The Hare and the Tortoise and a very few of the beasts saw it far off from a high bare hill that was at the edge of the trees, and they hurriedly called a meeting to decide what messenger they should send to warn the beasts in the forest.</p>
 			<p>They sent the Tortoise.</p>
