--- a/src/epub/text/a-moral-little-tale.xhtml
+++ b/src/epub/text/a-moral-little-tale.xhtml
@@ -9,10 +9,7 @@
 		<article id="a-moral-little-tale" epub:type="se:short-story">
 			<h2 epub:type="title">A Moral Little Tale</h2>
 			<p>There was once an earnest Puritan who held it wrong to dance. And for his principles he labored hard, his was a zealous life. And there loved him all of those who hated the dance; and those that loved the dance respected him too; they said “He is a pure, good man and acts according to his lights.”</p>
-			<p>He did much to discourage dancing and helped to close several<br/>
-			Sunday entertainments. Some kinds of poetry, he said, he liked, but<br/>
-			not the fanciful kind as that might corrupt the thoughts of the very young.<br/>
-			He always dressed in black.<br/></p>
+			<p>He did much to discourage dancing and helped to close several Sunday entertainments. Some kinds of poetry, he said, he liked, but not the fanciful kind as that might corrupt the thoughts of the very young. He always dressed in black.</p>
 			<p>He was quite interested in morality and was quite sincere and there grew to be much respect on Earth for his honest face and his flowing pure-white beard.</p>
 			<p>One night the Devil appeared unto him in a dream and said “Well done.”</p>
 			<p>“Avaunt,” said that earnest man.</p>
