--- a/src/epub/text/charon.xhtml
+++ b/src/epub/text/charon.xhtml
@@ -16,10 +16,7 @@
 			<p>Then no one came for a while. It was not usual for the gods to send no one down from Earth for such a space. But the gods knew best.</p>
 			<p>Then one man came alone. And the little shade sat shivering on a lonely bench and the great boat pushed off. Only one passenger: the gods knew best. And great and weary Charon rowed on and on beside the little, silent, shivering ghost.</p>
 			<p>And the sound of the river was like a mighty sigh that Grief in the beginning had sighed among her sisters, and that could not die like the echoes of human sorrow failing on earthly hills, but was as old as time and the pain in Charon’s arms.</p>
-			<p>Then the boat from the slow, grey river loomed up to the coast of<br/>
-			Dis and the little, silent shade still shivering stepped ashore, and<br/>
-			Charon turned the boat to go wearily back to the world. Then the<br/>
-			little shadow spoke, that had been a man.<br/></p>
+			<p>Then the boat from the slow, grey river loomed up to the coast of Dis and the little, silent shade still shivering stepped ashore, and Charon turned the boat to go wearily back to the world. Then the little shadow spoke, that had been a man.</p>
 			<p>“I am the last,” he said.</p>
 			<p>No one had ever made Charon smile before, no one before had ever made him weep.</p>
 		</article>
