Fix ID attribute

--- a/src/epub/text/the-poet-speaks-with-earth.xhtml
+++ b/src/epub/text/the-poet-speaks-with-earth.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<article id="the-mist" epub:type="se:short-story">
+		<article id="the-poet-speaks-with-earth" epub:type="se:short-story">
 			<h2 epub:type="title">The Poet Speaks with Earth<a href="endnotes.xhtml#note-2" id="noteref-2" epub:type="noteref">2</a></h2>
 			<p>Returning late one night from roaming amongst the stars I came on Mother Earth sitting all dark in Space, murmuring tales of her children.</p>
 			<p>“Dreams and battles,” she said. “Dreams and battles.” I heard her say nothing more.</p>
