--- a/src/epub/text/a-losing-game.xhtml
+++ b/src/epub/text/a-losing-game.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">A Losing Game</h2>
 			<p>Once in a tavern Man met face to skull with Death. Man entered gaily but Death gave no greeting, he sat with his jowl morosely over an ominous wine.</p>
 			<p>“Come, come,” said Man, “we have been antagonists long, and if I were losing yet I should not be surly.”</p>
-			<p>But Death remained unfriendly watching his bowl of wine and gave no word in answer.</p>
+			<p>But Death remained unfriendly, watching his bowl of wine and gave no word in answer.</p>
 			<p>Then Man solicitously moved nearer to him and, speaking cheerily still, “Come, come,” he said again, “you must not resent defeat.”</p>
 			<p>And still Death was gloomy and cross and sipped at his infamous wine and would not look up at Man and would not be companionable.</p>
 			<p>But Man hated gloom either in beast or god, and it made him unhappy to see his adversary’s discomfort, all the more because he was the cause, and still he tried to cheer him.</p>
