--- a/src/epub/text/the-reward.xhtml
+++ b/src/epub/text/the-reward.xhtml
@@ -18,7 +18,7 @@
 			<p>The angel went on hammering into place the huge steel uprights.</p>
 			<p>“You are very revengeful,” I said. “Do you never rest from doing this terrible work?”</p>
 			<p>“I rested one Christmas Day,” the angel said, “and looked and saw little children dying of cancer. I shall go on now until the fires are lit.”</p>
-			<p>“It is very hard to prove,” I said, “that the yeast is as bad as you think.”</p>
+			<p>“It is very hard to prove,” I said, “that the yeast is as bad as you think.</p>
 			<p>“After all,” I said, “they must live.”</p>
 			<p>And the angel made no answer but went on building his hell.</p>
 		</article>
