[Editorial] Add paragraph breaks to some dialogue

--- a/src/epub/text/the-reward.xhtml
+++ b/src/epub/text/the-reward.xhtml
@@ -9,7 +9,9 @@
 		<article id="the-reward" epub:type="se:short-story">
 			<h2 epub:type="title">The Reward</h2>
 			<p>One’s spirit goes further in dreams than it does by day. Wandering once by night from a factory city I came to the edge of Hell.</p>
-			<p>The place was foul with cinders and cast-off things, and jagged, half-buried things with shapeless edges, and there was a huge angel with a hammer building in plaster and steel. I wondered what he did in that dreadful place. I hesitated, then asked him what he was building. “We are adding to Hell,” he said, “to keep pace with the times.” “Don’t be too hard on them,” I said, for I had just come out of a compromising age and a weakening country. The angel did not answer. “It won’t be as bad as the old hell, will it?” I said. “Worse,” said the angel.</p>
+			<p>The place was foul with cinders and cast-off things, and jagged, half-buried things with shapeless edges, and there was a huge angel with a hammer building in plaster and steel. I wondered what he did in that dreadful place. I hesitated, then asked him what he was building. “We are adding to Hell,” he said, “to keep pace with the times.”</p>
+			<p>“Don’t be too hard on them,” I said, for I had just come out of a compromising age and a weakening country. The angel did not answer. “It won’t be as bad as the old hell, will it?” I said.</p>
+			<p>“Worse,” said the angel.</p>
 			<p>“How can you reconcile it with your conscience as a Minister of Grace,” I said, “to inflict such a punishment?” (They talked like this in the city whence I had come and I could not avoid the habit of it.)</p>
 			<p>“They have invented a new cheap yeast,” said the angel.</p>
 			<p>I looked at the legend on the walls of the hell that the angel was building, the words were written in flame, every fifteen seconds they changed their color, “Yeasto, the great new yeast, it builds up body and brain, and something more.”</p>
