--- a/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
+++ b/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
@@ -19,7 +19,8 @@
 			<p>And “run hard” became a kind of catchphrase which everybody repeated to one another. “Hard shell and hard living. That’s what the country wants. Run hard,” they said. And these words were never uttered but multitudes cheered from their hearts.</p>
 			<p>Then they were off, and suddenly there was a hush.</p>
 			<p>The Hare dashed off for about a hundred yards, then he looked round to see where his rival was.</p>
-			<p>“It is rather absurd,” he said, “to race with a Tortoise.” And he sat down and scratched himself. “Run hard! Run hard!” shouted some.</p>
+			<p>“It is rather absurd,” he said, “to race with a Tortoise.” And he sat down and scratched himself.</p>
+			<p>“Run hard! Run hard!” shouted some.</p>
 			<p>“Let him rest,” shouted others. And “let him rest” became a catchphrase too.</p>
 			<p>And after a while his rival drew near to him.</p>
 			<p>“There comes that damned Tortoise,” said the Hare, and he got up and ran as hard as could be so that he should not let the Tortoise beat him.</p>
