--- a/src/epub/text/the-sphinx-at-giza.xhtml
+++ b/src/epub/text/the-sphinx-at-giza.xhtml
@@ -26,7 +26,7 @@
 			<p>Great clumsy time shall stumble and dance, who liked to kill little children, and can hurt even the daisies no longer.</p>
 			<p>Then shall our children laugh at him who slew Babylon’s winged bulls, and smote great numbers of the gods and fairies⁠—when he is shorn of his hours and his years.</p>
 			<p>We will shut him up in the Pyramid of Cheops, in the great chamber where the sarcophagus is. Thence we will lead him out when we give our feasts. He shall ripen our corn for us and do menial work.</p>
-			<p>We will kiss they painted face, O Sphinx, if thou wilt betray to us Time.</p>
+			<p>We will kiss thy painted face, O Sphinx, if thou wilt betray to us Time.</p>
 			<p>And yet I fear that in his ultimate anguish he may take hold blindly of the world and the moon, and slowly pull down upon him the House of Man.</p>
 		</article>
 	</body>
