--- a/src/epub/text/the-sphinx-at-giza.xhtml
+++ b/src/epub/text/the-sphinx-at-giza.xhtml
@@ -23,7 +23,7 @@
 			<p>If she ever finds his secret we will put out his eyes, so that he shall find no more our beautiful things⁠—there are lovely gates in Florence that I fear he will carry away.</p>
 			<p>We have tried to bind him with song and with old customs, but they only held him for a little while, and he has always smitten us and mocked us.</p>
 			<p>When he is blind he shall dance to us and make sport.</p>
-			<p>Great clumsy time shall stumble and dance, who liked to kill little children, and can hurt even the daisies no longer.</p>
+			<p>Great clumsy Time shall stumble and dance, who liked to kill little children, and can hurt even the daisies no longer.</p>
 			<p>Then shall our children laugh at him who slew Babylon’s winged bulls, and smote great numbers of the gods and fairies⁠—when he is shorn of his hours and his years.</p>
 			<p>We will shut him up in the Pyramid of Cheops, in the great chamber where the sarcophagus is. Thence we will lead him out when we give our feasts. He shall ripen our corn for us and do menial work.</p>
 			<p>We will kiss thy painted face, O Sphinx, if thou wilt betray to us Time.</p>
