--- a/src/epub/text/alone-the-immortals.xhtml
+++ b/src/epub/text/alone-the-immortals.xhtml
@@ -16,7 +16,7 @@
 			<p>I said: “Who are those?”</p>
 			<p>One answered: “Alone the Immortals.”</p>
 			<p>And I said sadly: “I came not to see dread gods, but I came to shed my tears and to offer flowers at the feet of certain little years that are dead and may not come again.”</p>
-			<p>He answered me: “These <em>are</em> the years that are dead, alone the immortals; all years to be are Their children⁠—They fashioned their smiles and their laughter; all earthly kings They have crowned, all gods They have created; all the events to be flow down from their feet like a river, the worlds are flying pebbles that They have already thrown, and Time and all his centuries behind him kneel there with bended crests in token of vassalage at Their potent feet.”</p>
+			<p>He answered me: “These <em>are</em> the years that are dead, alone the immortals; all years to be are Their children⁠—They fashioned their smiles and their laughter; all earthly kings They have crowned, all gods They have created; all the events to be flow down from Their feet like a river, the worlds are flying pebbles that They have already thrown, and Time and all his centuries behind him kneel there with bended crests in token of vassalage at Their potent feet.”</p>
 			<p>And when I heard this I turned away with my wreath, and went back to my own land comforted.</p>
 		</article>
 	</body>
