--- a/src/epub/text/the-demagogue-and-the-demimonde.xhtml
+++ b/src/epub/text/the-demagogue-and-the-demimonde.xhtml
@@ -14,7 +14,7 @@
 			<p>“And you?” said the Saint to her of the demimonde.</p>
 			<p>“I wanted money,” said the demimondaine.</p>
 			<p>And after some moments’ thought the Saint said: “Well, come in; though you don’t deserve to.”</p>
-			<p>But to the demagogue he said: “We genuinely regret that the limited space at our disposal and our unfortunate lack of interest in those Questions that you have gone so far to inculate and have so ably upheld in the past, prevent us from giving you the support for which you seek.”</p>
+			<p>But to the demagogue he said: “We genuinely regret that the limited space at our disposal and our unfortunate lack of interest in those Questions that you have gone so far to inculcate and have so ably upheld in the past, prevent us from giving you the support for which you seek.”</p>
 			<p>And he shut the golden door.</p>
 		</article>
 	</body>
